<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundoverlay"
    tools:context=".app.AdminSetting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/admin_setting_toolbar"
            layout="@layout/toolbar"/>


        <ImageView
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@layout/imageview_border"
            android:layout_gravity="center_horizontal"
            android:id="@+id/admin_setting_profile_image" />

        <Button
            android:background="@drawable/changebtnoverlay"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="Drag Image"
            android:id="@+id/admin_setting_drag_image" />

        <Button
            android:background="@drawable/changebtnoverlay"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="U[pload Image"
            android:visibility="gone"
            android:id="@+id/admin_setting_upload_image"/>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register Another Hotel"
                android:textSize="25sp"
                android:id="@+id/admin_setting_register_hotel"/>

            <TextView
                android:textSize="20sp"
                android:background="@color/viewprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_another_hotel"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Change Your Email"
                android:id="@+id/admin_setting_change_email"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_email"
                android:textSize="20sp"
                android:background="@color/viewprofile"
                android:id="@+id/admin_setting_email_description"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:id="@+id/admin_setting_email"
                android:visibility="gone"
                android:hint="Email"/>

            <Button
                android:background="@drawable/changebtnoverlay"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change Email"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:id="@+id/admin_setting_change_email_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Change Your Phone Number"
                android:id="@+id/admin_setting_change_phone"
                android:textSize="25sp"/>

            <TextView
                android:textSize="20sp"
                android:background="@color/viewprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_phone_number"
                android:id="@+id/admin_setting_phone_description"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:id="@+id/admin_setting_phone"
                android:visibility="gone"
                android:hint="Email"/>

            <Button
                android:background="@drawable/changebtnoverlay"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change Email"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:id="@+id/admin_setting_change_phone_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Reset your Password"
                android:id="@+id/admin_setting_reset_password"
                android:textSize="25sp"/>

            <TextView
                android:textSize="20sp"
                android:background="@color/viewprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:id="@+id/admin_setting_password_description"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:id="@+id/admin_setting_password_Edit"
                android:visibility="gone"
                android:hint="Email"/>

            <Button
                android:background="@drawable/changebtnoverlay"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change Email"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:id="@+id/admin_setting_change_password_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Delete Account"
                android:id="@+id/admin_setting_delete_account"
                android:textSize="25sp"/>

            <TextView
                android:textSize="20sp"
                android:background="@color/viewprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_account"/>

        </LinearLayout>

        <TextView
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign out"
            android:id="@+id/admin_setting_sign_out"
            android:layout_marginBottom="20sp"
            android:textSize="25sp"/>

    </LinearLayout>

</ScrollView>